# resume

./: .gitignore  Dockerfile  Naidiuk Oleksii Python Dev.html  Oleksii Naidiuk.html  Python dev Naidiuk Oleksii.html  docker-compose.yaml  download_converter.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_image.yml  deploy.yml
app/: config.py  main.py
front/: Python dev Naidiuk Oleksii.html  index.html
front/assets/css/: index.css  index.css.map  index.min.css  index.scss
